--- a/src/app/Views/Reportes/reportes.component.html
+++ b/src/app/Views/Reportes/reportes.component.html
@@ -50,7 +50,7 @@
       <tr *ngFor="let item of dataFilter">
         <th scope="row">{{item.id}}</th>
         <td>{{item.idCliente}}</td>
-        <td>{{item.numeroFactura}}</td>
+        <td>{{item.numero}}</td>
         <td>{{item.fecha}}</td>
         <td>{{item.descripcion}}</td>
         <td>{{item.valor | currency}}</td>
