--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,9 @@
               style="background-image:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADIAAAAhCAMAAACsowi2AAAAFVBMVEX/AAD//zP//zT/CQL/wCb/uCb/BwJ5v/yKAAAAMklEQVQ4jWNgGAW0B8wkAwYWkgEDE8mAgZFkMKplVAvNtZCRkllJBgxsJIOBLkdGBAAAI50G15VEGzwAAAAASUVORK5CYII=); background-repeat: no-repeat; background-size: 46px; background-position-y: -1px; background-position-x: -1px;"></button>
           </div>
         </div>
+        <div>
+          <p style="margin-bottom: 0px;" >{{this.carga.name}}</p>
+        </div>
       </div>
     </div>
   </div>
@@ -63,6 +66,7 @@
       <p translate>Master_footer_info_6</p>
       <p class="redes-footer1" translate>Master_footer_info_7</p>
     </div>
+    <!--Redes Sociales-->
     <div class="col-md-4 col-lg-2 col-4 redes-footer">
       <div class="row">
         <div class="col-md-2 col-lg-2 col-2" style="padding-right: 0px;">
