--- a/src/app/Views/ProcesoJuridico/proceso-juridico.component.html
+++ b/src/app/Views/ProcesoJuridico/proceso-juridico.component.html
@@ -13,8 +13,10 @@
                 <button type="button" (click)="clearModalForm()" class="close" data-dismiss="modal" #closeAddExpenseModal>&times;</button>
             </div>
             <div class="modal-body">
+                <!--Formulario-->
                 <form id="frmProcesos" class="form-1">
                     <div >
+                        <!--campo observaciones-->
                         <label id="lblObservaciones" for="txtObservaciones" class="fl-label" translate>Procesos_modal_Observaciones</label>
                         <input type="textarea" id='txtObservaciones' name="txtObservaciones" class="fl-input required" />
                         <p class="has-error">{{ 'General_Msg_Requerido' | translate}}</p>
@@ -22,6 +24,7 @@
                 </form>
             </div>
             <div class="modal-footer">
+                <!--Botones-->
                 <div *ngIf="editProceso">
                     <button id="btnActualizar" type="button" class="btn btn-ISA" (click)="Editar()">{{ 'Proceso_modal_btnActualizar' | translate}}</button>
                 </div>
@@ -52,6 +55,7 @@
         <div class="col-md-12">&nbsp;
             <div id="spLoading" class="loader2"></div>
         </div>
+        <!--Data table donde se muestra todas las facturas para realizar procesos jurídicos-->
         <div id="dvTable" style="display: none" class="col-md-12">
             <table id="tblLista" datatable style="width: 100%" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped compact hover">
                 <thead>
@@ -75,10 +79,10 @@
                         <td>{{lst.Estado}}</td>
                         <td style="text-align: center; width: 10%">
                             <span *ngIf="lst.Estado == 'Proceso juridico iniciado'">
-                                <i (click)="crearProceso(lst.Id)" class="fas fa-edit button-grid" style="color: blue" tooltipPosition="right" pTooltip="{{ 'Proceso_Resultado' | translate }}"></i>&nbsp;
+                                <i (click)="crearProceso(lst.id)" class="fas fa-edit button-grid" style="color: blue" tooltipPosition="right" pTooltip="{{ 'Proceso_Resultado' | translate }}"></i>&nbsp;
                             </span>
                             <span *ngIf="lst.Estado == 'Proceso juridico completado'">
-                                <i (click)="editProcesos(lst.Id)" class="fas fa-edit button-grid" style="color: blue" tooltipPosition="right" pTooltip="{{ 'Proceso_Editar' | translate }}"></i>&nbsp;
+                                <i (click)="editProcesos(lst.id)" class="fas fa-edit button-grid" style="color: blue" tooltipPosition="right" pTooltip="{{ 'Proceso_Editar' | translate }}"></i>&nbsp;
                             </span>
                         </td>
                     </tr>
