--- a/src/app/Views/Reportes/reportes.component.html
+++ b/src/app/Views/Reportes/reportes.component.html
@@ -1,3 +1,4 @@
+<!--Cargando-->
 <div class="col-md-12" *ngIf="isLoading">&nbsp;
   <div id="spLoading" class="loader2"></div>
 </div>
@@ -7,12 +8,16 @@
   <div class="col-md-12" *ngIf="!isGrafig">&nbsp;
     <div id="spLoading" class="loader2"></div>
   </div>
+  <!--Gráficas-->
   <div class="row" *ngIf="isGrafig ">
     <div class="col-12 col-md-6">
       <h3>{{ 'report.title_bar1' | translate }}</h3>
-      <app-bar-chart [width]="500" [height]="400" [data]="dataSinMora" [yOffset]="true">
+      <app-bar-chart [width]="1200" [height]="400" [data]="dataSinMora" [yOffset]="true">
       </app-bar-chart>
     </div>
+  </div>
+
+  <div class="row" *ngIf="isGrafig ">
     <div class="col-12 col-md-6">
       <h3>{{ 'report.title_bar2' | translate }}</h3>
       <app-bar-chart-stacked [width]="500" [height]="400" [data]="dataConReport" [yOffset]="false" [legend]="['Cobro', 'En mora']">
